[tool.poetry]
name = "hexlet-code"
version = "0.6.0"
description = "First project on hexlet.io named 'The Brain Games'"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console",
    "License :: Freeware",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.11"
]
repository = "https://github.com/stoledcat/python-project-49"
authors = ["stoledcat <jetnavo@yandex.ru>"]
readme = "README.md"
packages = [ { include = "brain_games" }, ]

[tool.poetry.dependencies]
python = "^3.11"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
